crates/cli/tests/snapshots/snapshot_tests__sarif_health_empty.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: redact_health_sarif_version(&json_str)
---
{
  "$schema": "https://json.schemastore.org/sarif-2.1.0.json",
  "version": "2.1.0",
  "runs": [
    {
      "tool": {
        "driver": {
          "name": "plow",
          "version": "[VERSION]",
          "informationUri": "https://github.com/plow-rs/plow",
          "rules": [
            {
              "id": "plow/high-cyclomatic-complexity",
              "shortDescription": {
                "text": "Function has high cyclomatic complexity"
              },
              "fullDescription": {
                "text": "McCabe cyclomatic complexity exceeds the configured threshold. Cyclomatic complexity counts the number of independent paths through a function (1 + decision points: if/else, switch cases, loops, ternary, logical operators). High values indicate functions that are hard to test exhaustively. plow also emits this rule on synthetic `<template>` findings (Angular .html templates and inline `@Component({ template: ... })` literals), counting template control-flow blocks (`@if`, `@else if`, `@for`, `@case`, `@defer (when ...)`, legacy `*ngIf`/`*ngFor`) plus ternary and logical operators inside bound attributes and `{{ }}` interpolations; and on synthetic `<component>` rollup findings whose `cyclomatic` is the worst class method's score plus the template's. Ranking and `--targets` use the rollup total; JSON exposes the per-half breakdown under `component_rollup`."
              },
              "helpUri": "https://docs.genesis-plow.dev/explanations/health#cyclomatic-complexity",
              "defaultConfiguration": {
                "level": "note"
              }
            },
            {
              "id": "plow/high-cognitive-complexity",
              "shortDescription": {
                "text": "Function has high cognitive complexity"
              },
              "fullDescription": {
                "text": "SonarSource cognitive complexity exceeds the configured threshold. Unlike cyclomatic complexity, cognitive complexity penalizes nesting depth and non-linear control flow (breaks, continues, early returns). It measures how hard a function is to understand when reading sequentially. plow also emits this rule on synthetic `<template>` findings (Angular .html templates and inline `@Component({ template: ... })` literals), where nesting penalties accumulate on stacked `@if`/`@for`/`@switch` blocks; and on synthetic `<component>` rollup findings whose `cognitive` is the worst class method's score plus the template's. Ranking and `--targets` use the rollup total; JSON exposes the per-half breakdown under `component_rollup`."
              },
              "helpUri": "https://docs.genesis-plow.dev/explanations/health#cognitive-complexity",
              "defaultConfiguration": {
                "level": "note"
              }
            },
            {
              "id": "plow/high-complexity",
              "shortDescription": {
                "text": "Function exceeds both complexity thresholds"
              },
              "fullDescription": {
                "text": "Function exceeds both cyclomatic and cognitive complexity thresholds. This is the strongest signal that a function needs refactoring, it has many paths AND is hard to understand. The same rule fires on synthetic `<template>` findings (Angular .html templates and inline `@Component({ template: ... })` literals) when both metrics exceed their thresholds, and on synthetic `<component>` rollup findings whose totals are the worst class method's score plus the template's. Ranking and `--targets` use the rollup totals; JSON exposes the per-half breakdown under `component_rollup`."
              },
              "helpUri": "https://docs.genesis-plow.dev/explanations/health#complexity-metrics",
              "defaultConfiguration": {
                "level": "note"
              }
            },
            {
              "id": "plow/high-crap-score",
              "shortDescription": {
                "text": "Function has a high CRAP score (complexity combined with low coverage)"
              },
              "fullDescription": {
                "text": "The function's CRAP (Change Risk Anti-Patterns) score meets or exceeds the configured threshold. CRAP combines cyclomatic complexity with test coverage using the Savoia and Evans (2007) formula: `CC^2 * (1 - coverage/100)^3 + CC`. High CRAP indicates changes to this function carry high risk because it is complex AND poorly tested. Pair with `--coverage` for accurate per-function scoring; without it plow estimates coverage from the module graph."
              },
              "helpUri": "https://docs.genesis-plow.dev/explanations/health#crap-score",
              "defaultConfiguration": {
                "level": "warning"
              }
            },
            {
              "id": "plow/refactoring-target",
              "shortDescription": {
                "text": "File identified as a high-priority refactoring candidate"
              },
              "fullDescription": {
                "text": "File identified as a refactoring candidate based on a weighted combination of complexity density, churn velocity, dead code ratio, fan-in (blast radius), and fan-out (coupling). Categories: urgent churn+complexity, break circular dependency, split high-impact file, remove dead code, extract complex functions, reduce coupling."
              },
              "helpUri": "https://docs.genesis-plow.dev/explanations/health#refactoring-targets",
              "defaultConfiguration": {
                "level": "warning"
              }
            },
            {
              "id": "plow/untested-file",
              "shortDescription": {
                "text": "Runtime-reachable file has no test dependency path"
              },
              "fullDescription": {
                "text": "A file is reachable from runtime entry points but not from any discovered test entry point. This indicates production code that no test imports, directly or transitively, according to the static module graph."
              },
              "helpUri": "https://docs.genesis-plow.dev/explanations/health#coverage-gaps",
              "defaultConfiguration": {
                "level": "warning"
              }
            },
            {
              "id": "plow/untested-export",
              "shortDescription": {
                "text": "Runtime-reachable export has no test dependency path"
              },
              "fullDescription": {
                "text": "A value export is reachable from runtime entry points but no test-reachable module references it. This is a static test dependency gap rather than line coverage, and highlights exports exercised only through production entry paths."
              },
              "helpUri": "https://docs.genesis-plow.dev/explanations/health#coverage-gaps",
              "defaultConfiguration": {
                "level": "warning"
              }
            },
            {
              "id": "plow/runtime-safe-to-delete",
              "shortDescription": {
                "text": "Statically unused AND never invoked in production with V8 tracking"
              },
              "fullDescription": {
                "text": "The function is both statically unreachable in the module graph and was never invoked during the observed runtime coverage window. This is the highest-confidence delete signal plow emits."
              },
              "helpUri": "https://docs.genesis-plow.dev/explanations/health#runtime-coverage",
              "defaultConfiguration": {
                "level": "warning"
              }
            },
            {
              "id": "plow/runtime-review-required",
              "shortDescription": {
                "text": "Statically used but never invoked in production"
              },
              "fullDescription": {
                "text": "The function is reachable in the module graph (or exercised by tests / untracked call sites) but was not invoked during the observed runtime coverage window. Needs a human look: may be seasonal, error-path only, or legitimately unused."
              },
              "helpUri": "https://docs.genesis-plow.dev/explanations/health#runtime-coverage",
              "defaultConfiguration": {
                "level": "warning"
              }
            },
            {
              "id": "plow/runtime-low-traffic",
              "shortDescription": {
                "text": "Function was invoked below the low-traffic threshold"
              },
              "fullDescription": {
                "text": "The function was invoked in production but below the configured `--low-traffic-threshold` fraction of total trace count (spec default 0.1%). Effectively dead for the current period."
              },
              "helpUri": "https://docs.genesis-plow.dev/explanations/health#runtime-coverage",
              "defaultConfiguration": {
                "level": "note"
              }
            },
            {
              "id": "plow/runtime-coverage-unavailable",
              "shortDescription": {
                "text": "Runtime coverage could not be resolved for this function"
              },
              "fullDescription": {
                "text": "The function could not be matched to a V8-tracked coverage entry. Common causes: the function lives in a worker thread (separate V8 isolate), it is lazy-parsed and never reached the JIT tier, or its source map did not resolve to the expected source path. This is advisory, not a dead-code signal."
              },
              "helpUri": "https://docs.genesis-plow.dev/explanations/health#runtime-coverage",
              "defaultConfiguration": {
                "level": "note"
              }
            },
            {
              "id": "plow/runtime-coverage",
              "shortDescription": {
                "text": "Runtime coverage finding"
              },
              "fullDescription": {
                "text": "Generic runtime-coverage finding for verdicts not covered by a more specific rule. Covers the forward-compat `unknown` sentinel; the CLI filters `active` entries out of `runtime_coverage.findings` so the surfaced list stays actionable."
              },
              "helpUri": "https://docs.genesis-plow.dev/explanations/health#runtime-coverage",
              "defaultConfiguration": {
                "level": "note"
              }
            }
          ]
        }
      },
      "results": []
    }
  ]
}
